--- a/hardware design/CSB01-RGB-09A-1 单芯片幻彩 20201007/CSB01-RGB-09A-1 单芯片幻彩 20201007.PcbDoc.htm
+++ b/hardware design/CSB01-RGB-09A-1 单芯片幻彩 20201007/CSB01-RGB-09A-1 单芯片幻彩 20201007.PcbDoc.htm
@@ -126,12 +126,12 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">1/10/2022</td>
+            <td class="front_matter_column3">1/16/2022</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">4:28:03 PM</td>
+            <td class="front_matter_column3">2:18:16 AM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
